Adaptive write block

--- a/src/main.scss
+++ b/src/main.scss
@@ -43,7 +43,7 @@
 @import "popupBox";
 @import "popupDialogue";
 @import "smiles";
-@import "write-block";
+@import "./write/write";
 
 // -----------------------------------------------------------------------------
 // 6. PAGES & SECTIONS
