--- a/src/main.scss
+++ b/src/main.scss
@@ -53,6 +53,7 @@
 @import "./profile/profile";
 @import "./vocabularies/vocabularies";
 @import "./vocabularies/vocabulary";
+@import "./vocabularies/vocabulary-comments";
 @import "gamelist";
 @import "gametypes";
 @import "createGame";
