--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -13,7 +13,7 @@
   grid-template-rows: auto auto 1fr;
 
   dl {
-    margin: 10px 0 0 !important;
+    margin: 10px 0 0;
   }
 
   dd {
@@ -174,7 +174,7 @@
     width: 100% !important;
 
     dt {
-      width: 100px !important;
+      width: 100px;
     }
 
     dd[style*="avatars/"] {
@@ -187,7 +187,7 @@
         @include avatar-mask(4, 32px, $darkgray);
       }
     }
-    dl:not(.write) {
+    dl:not(.write):not(:has(.title)) {
       dd {
         margin-left: 120px !important;
         background-color: transparent !important;
