--- a/src/main.scss
+++ b/src/main.scss
@@ -19,6 +19,7 @@
 // -----------------------------------------------------------------------------
 @import "base";
 @import "nameRankColor";
+@import "garbage";
 
 // -----------------------------------------------------------------------------
 // 4. LAYOUT COMPONENTS
