--- a/src/home.scss
+++ b/src/home.scss
@@ -13,6 +13,15 @@
       .col1 {
         display: none !important;
       }
+
+      // First row (Game buttons), Second row (Discussed, Top)
+      .col2,
+      .col3,
+      .col4 {
+        width: unset !important;
+        left: unset !important;
+        position: unset !important;
+      }
     }
 
     .firstrow {
@@ -38,6 +47,11 @@
         align-items: center;
         text-align: center;
 
+        .index-icon-container {
+          text-align: unset !important;
+          width: 100% !important;
+        }
+
         // Hide game buttons images
         a:not(.title),
         p {
@@ -45,9 +59,14 @@
         }
 
         a.title {
+          display: inline-flex !important;
+          justify-content: center !important;
+          align-items: center !important;
           text-decoration: none !important;
           color: $white !important;
           font: 500 1.5em "Montserrat", sans-serif !important;
+          width: 100% !important;
+          margin: 0 !important;
         }
       }
       // Fast game
@@ -67,11 +86,24 @@
     }
 
     .secondrow {
+      // Convert to flexbox layout for centering
+      display: flex !important;
+      justify-content: center; // Center horizontally
+      align-items: start; // Align to top (or use 'center' for vertical centering)
+      gap: 1em; // Add space between columns
+
       // Discussed
       .col2 {
+        flex: 1; // Equal width
+        display: flex !important;
+        flex-direction: column;
       }
+
       // Top
       .col3 {
+        flex: 1; // Equal width
+        display: flex !important;
+        flex-direction: column;
       }
     }
   }
