--- a/src/mediaQueries/_layout.scss
+++ b/src/mediaQueries/_layout.scss
@@ -3,15 +3,29 @@
 // Layout and General Styles
 /* max width 1300px */
 @media only screen and (max-width: 1300px) {
-  .minwidth_holyhack,
-  .minwidth_container {
-    width: 100% !important;
-    max-width: 100% !important;
-    min-width: 100% !important;
+  #content, #head {
+    .minwidth_holyhack,
+    .minwidth_container {
+      width: 100% !important;
+      max-width: 100% !important;
+      min-width: 100% !important;
+    }
   }
 }
 
 $margin-top: 50px;
+
+/* head */
+#head {
+  .minwidth_holyhack {
+    display: flex;
+    justify-content: center !important;
+
+    .minwidth_container {
+      width: $container !important;
+    }
+  }
+}
 
 /* content top space */
 #content {
