--- a/src/main.scss
+++ b/src/main.scss
@@ -13,6 +13,7 @@
 /* Custom fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap"); // Montserrat
 @import url('https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap'); // Lekton
+@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap'); // Noto Color Emoji
 
 // -----------------------------------------------------------------------------
 // 3. BASE & RESET
