--- a/src/main.scss
+++ b/src/main.scss
@@ -50,7 +50,7 @@
 // -----------------------------------------------------------------------------
 // 6. PAGES & SECTIONS
 // -----------------------------------------------------------------------------
-@import "home";
+@import "./home/home";
 @import "login";
 @import "./profile/profile";
 @import "./vocabularies/vocabularies";
