--- a/src/mediaQueries/_layout.scss
+++ b/src/mediaQueries/_layout.scss
@@ -3,13 +3,12 @@
 // Layout and General Styles
 /* max width 1300px */
 @media only screen and (max-width: 1300px) {
-  #content, #head {
-    .minwidth_holyhack,
-    .minwidth_container {
-      width: 100% !important;
-      max-width: 100% !important;
-      min-width: 100% !important;
-    }
+  .minwidth,
+  .minwidth_holyhack,
+  .minwidth_container {
+    width: 100% !important;
+    max-width: 100% !important;
+    min-width: 100% !important;
   }
 }
 
