Fix import Montserrat font in main.scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -11,7 +11,7 @@
 // 2. EXTERNAL DEPENDENCIES
 // -----------------------------------------------------------------------------
 /* Custom fonts */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap"); // Montserrat
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap'); // Montserrat
 @import url('https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap'); // Lekton
 @import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap'); // Noto Color Emoji
 
