Small adapt for stats.scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -63,7 +63,7 @@
 @import "forum";
 @import "chatlogs";
 @import "chat";
-@import "stats";
+@import "./stats/stats";
 @import "toplist";
 @import "search";
 @import "donate";
